fixed z-index bug with upgrade button

--- a/resources/html/css/style.css
+++ b/resources/html/css/style.css
@@ -263,7 +263,6 @@
     color: white;
     overflow: hidden;
     font-family: Lato;
-    z-index: -1;
 }
 
 .game-entity-disabled {
